# libpmp

./: .gitignore  .pylintrc  AUTHORS  HOWTO.virtualenv  HOWTO.virtualenv.md  LICENSE  Makefile  README.md  cost.py  progress.py  pyproject.toml  python_requirements.txt
.github/workflows/: run_tests.yaml
common/: text.py
common/test/: deps_test.py
distributions/: distribution.py  log_logistic.py  numeric.py  operations.py  point_distribution.py  uniform.py
distributions/test/: distribution_test.py  operations_test.py
doc/: developer_setup.md
historical/: burndown.py  history.py  report.py
historical/test/: history_test.py
history/: history.py
history/test/: history_test.py
libpmp/: cost.py  progress.py
libpmp/common/: text.py
libpmp/common/test/: deps_test.py
libpmp/distributions/: distribution.py  log_logistic.py  numeric.py  operations.py  point_distribution.py  uniform.py
libpmp/distributions/test/: distribution_test.py  operations_test.py
libpmp/historical/: burndown.py  history.py  report.py
libpmp/historical/test/: history_test.py
libpmp/model/: from_html.py  from_markdown.py  node.py  node_plot.py
libpmp/model/test/: markdown_test.py
libpmp/report/: display_cdf.py  enhanced_html.py  parser_debug.py  structure_dump.py
libpmp/samples/: complex_header_structure.md
model/: from_html.py  from_markdown.py  node.py  node_plot.py
model/test/: markdown_test.py
report/: display_cdf.py  enhanced_html.py  parser_debug.py  structure_dump.py
samples/: 2017q3ork.md  tmp.md
test/: run_tests.sh
