[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libpmp"
version = "0.1.0"
description = "Library for probabilistic project management"
authors = []
readme = "README.md"
license = {text = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "astroid>=2.2.5",
    "certifi>=2019.3.9",
    "CommonMark>=0.7.0",
    "cycler>=0.10.0",
    "future>=0.15.2",
    "isort>=4.2.15",
    "lazy-object-proxy>=1.3.1",
    "matplotlib>=2.0.2",
    "mccabe>=0.6.1",
    "nose-parameterized>=0.5.0",
    "numpy>=1.16.4",
    "parameterized>=0.6.1",
    "pyparsing>=2.2.0",
    "pytest~=9.0",
    "python-dateutil>=2.6.0",
    "pytz>=2017.2",
    "ruff>=0.1.0",
    "scipy>=1.3.0",
    "setuptools>=82.0.1",
    "six>=1.10.0",
    "virtualenv-clone>=0.5.3",
    "virtualenv>=16.6.0",
    "wrapt>=1.10.10",
]

[project.scripts]
cost = "libpmp:cost"
progress = "libpmp:progress"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 80
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by line-length)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "**/test",
]
